--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3307/library_app
+spring.datasource.username=root
+spring.datasource.password=26May2023@tito
+spring.jpa.hibernate.ddl-auto=update
